# DPLL

./: CDCL.cpp  CDCL.h  CHRONOLOGICAL_BACKTRACK_DPLL.cpp  CHRONOLOGICAL_BACKTRACK_DPLL.h  CMakeLists.txt  DPLL.cpp  DPLL.h  README.md  common.h  compare.cpp  main.cpp  main2.cpp  test.cpp
test_code/: generate_NQUEEN_cnf.py  random_cnf_test.py  val18.py
tests/: my.dimacs  queen10.dimacs  queen15.dimacs  queen20.dimacs  queen25.dimacs  queen5.dimacs
